# python-playground

./: README.md
compy_flask/: README.md
compy_flask/templates/: 404.jinja2
core/: Pipfile  README.md  ch1.py  ch10.py  ch11WebScraping.py  ch12Selenium.py  ch13Async.py  ch14.py  ch17Decorators.py  ch18OO.py  ch19UI.py  ch2.py  ch21AlgoDataStructure.py  ch23.py  ch4.py  ch5.py  ch6.py  ch7.py  ch8.py  ch9.py  csv.txt  data.txt  db.py  file_operations.py  friends.json  nearby_friends.txt  people.txt  test_ch20UnitTest.py
core/.devcontainer/: Dockerfile  devcontainer.json
core/compy_flask/: app.py
core/compy_flask/templates/: base.jinja2  post.jinja2
corepy-oo/: Pipfile  README.md
corepy-oo/src/: atts_mtds_properties.py  class_decorators.py  mult_ih_method_resol.py  my_data_classes.py  str_rep_of_obj.py
py-data-analysis/: pyproject.toml
py-data-analysis/py_data_analysis/: 01.py  ch2_python_crash_course.html  ch2_python_crash_course.ipynb  ch3_panda_data.py  ch3_panda_loading_and_combining_data.ipynb  ch3_panda_loading_and_combining_data.py  ch3_panda_loading_data.ipynb  ch3_panda_loading_data.py  ch6_data_cleaning.html  ch6_data_cleaning.ipynb  ch6_data_cleaning.py  ch6_data_cleaning_text.py  ch7_transform_cols_features.py  hpower.pkl  wdi_clean.pkl
