[tool.poetry]
name = "py-data-analysis"
version = "0.1.0"
description = ""
authors = ["Juan Macias"]
readme = "README.md"
packages = [{include = "py_data_analysis"}]

[tool.poetry.dependencies]
python = "3.9.1"
jupyter = "^1.0.0"
pandas = "^1.5.0"
openpyxl = "^3.0.10"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
